--- a/src/app/Pages/login/login.html
+++ b/src/app/Pages/login/login.html
@@ -1,1 +1,25 @@
-<p>login works!</p>
+<div class="wrapper">
+  <div class="container">
+    <div class="login-box">
+      <h2>Sign In</h2>
+      <form (ngSubmit)="onSubmit()">
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input  name="email" type="email" id="email" placeholder="you@example.com" />
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input  name="password" type="password" id="password" placeholder="••••••••" />
+        </div>
+        <div class="form-footer">
+          <label class="checkbox">
+            <input  name="remember" type="checkbox" /> Remember me
+          </label>
+          <a href="#">Forgot?</a>
+        </div>
+        <button type="submit">Login</button>
+      </form>
+      <p class="signup">Don't have an account? <a href="#">Sign up</a></p>
+    </div>
+  </div>
+</div>
